--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: no style, please! # name of the site
-author: Riccardo Graziosi # name of site's author
-email: riccardo.graziosi97@gmail.com # email of site's author
-url: https://riggraz.dev # root address of the site
+title: 代码构建人生! # name of the site
+author: lilei # name of site's author
+email: 1339098678@qq.com # email of site's author
+url: https://xiaoleitongxue.github.io/ # root address of the site
 baseurl: "/" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
   A (nearly) no-CSS, fast, minimalist Jekyll theme.
