--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -15,3 +15,10 @@ entries:
       show_more: true
       show_more_text: See archive...
       show_more_url: archive.html
+
+  - title: posts by category
+    post_list:
+      category: distributed system
+      show_more: true
+      show_more_text: See more posts...
+      show_more_url: example2-archive.html
