--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -17,15 +17,15 @@ entries:
       show_more_url: archive.html
 
   - title: posts by category
-      - post_list:
-          title: distributed system
+      - title: distributed system
+        post_list:
           category: distributed system
           show_more: true
           show_more_text: See more posts...
           show_more_url: example2-archive.html
-      - post_list:
-          title: reading
-          category: reading
+      - title: distributed system
+        post_list:
+          category: distributed system
           show_more: true
           show_more_text: See more posts...
           show_more_url: example2-archive.html
