--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -30,3 +30,9 @@ entries:
           show_more: true
           show_more_text: See more posts...
           show_more_url: example2-archive.html
+      - title: software
+        post_list:
+          category: software
+          show_more: true
+          show_more_text: See more posts...
+          show_more_url: example2-archive.html
