--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,7 +4,7 @@
 entries:
   - title: info
     entries:
-      - title: Second-year master student at Yunnan University
+      - title: Second-year master candidate at Yunnan University
       - title: github repo
         url: https://github.com/xiaoleitongxue
       # - title: "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
